--- a/index.html
+++ b/index.html
@@ -2,146 +2,17 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="description" content="Blogpost de Ricardo Patiño donde podrás conocer un poco sobre su recorrido y su trabajo">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Card</title>
-    <style>
-        body
-        {
-            text-align: center;
-            font-family: Helvetica;
-        }
-        .container
-        {
-            display: flex;
-            width: 100%;
-            justify-content: center;
-        }
-        .card
-        {
-            width: 400px;
-            height: 600px;
-            background: lightblue;
-            box-shadow: 10px 10px 10px lightslategray;
-            border-radius: 10px;
-            overflow: hidden;
-            box-sizing: border-box;
-        }
-        .card > img
-        {
-            width: 100%;
-        }
-        .card img:nth-child(2)
-        {
-            width: 160px;
-            height: 160px;
-            border: 5px solid lightblue;
-            box-sizing: border-box;
-            border-radius: 50%;
-            margin: 0px;
-            position: relative;
-            top: -80px;
-        }
-        div h1
-        {
-            margin-bottom: 5px;
-            position: relative;
-            top: -17%;
-        }
-        div p
-        {
-            margin-top: 5px;
-            color:rgb(59, 73, 78);
-            position: relative;
-            top: -17%;
-        }
-        .container2
-        {
-            display: flex;
-            width: 100%;
-            position: relative;
-            top: -17%;
-            justify-content: space-around;
-            align-items: center;
-            align-content: center;
-            margin: 15% auto 5%;
-        }
-        .container2 .item
-        {
-            position: relative;
-            top: 0px;
-            margin: 1em 0 1em;
-        }
-        p a
-        {
-            color:rgb(59, 73, 78);
-        }
-        p a:hover
-        {
-            color: black;
-        }
-        .container3
-        {
-            background: rgb(140, 175, 187);
-            display: flex;
-            width: 100%;
-            height: 10%;
-            position: relative;
-            top: -18%;
-            justify-content: space-around;
-            align-items: center;
-        }
-        .container3:hover
-        {
-            background: rgb(242, 245, 247);
-        }
-        .container3 .item2
-        {
-           width: 30px;
-           height: 30px;
-        }
-        .item2 img
-        {
-            width: 100%;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=6.0, minimum-scale=1.0">
+
+    <link rel="stylesheet" href="./styles/styles.css">
+
+    <title>Ricardo Patiño</title>
+
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/icons/r-icon.png">
 </head>
 <body>
-    <section class="container">
-        <div class="card">
-            <img src="https://images.pexels.com/photos/3520694/pexels-photo-3520694.jpeg?auto=compress&cs=tinysrgb&h=650&w=940" alt="Circuitos">
-            <img src="https://media-exp1.licdn.com/dms/image/C4D03AQF5G8yx8E34Sw/profile-displayphoto-shrink_800_800/0/1597761094478?e=1648684800&v=beta&t=UTcHQRGXZac-P7PbsKqHthEV0LoWPjrI0npGUPUjPKc" alt="Robot">
-            <h1>Ricardo Patiño Echeverri</h1>
-            <p>Frontend & Backend developer</p>
-            <section class="container2">
-                <p class="item">📍 Medellín, Colombia</p>
-                <p class="item">📧
-                    <a href="mailto:rpatino12@outlook.com"> Send E-mail</a>
-                </p>
-            </section>
-            <section class="container3">
-                <div class="item2">
-                    <a href="https://www.instagram.com/ricardop03/">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1051/1051364.png" alt="instagram-icon">
-                    </a>
-                </div>
-                <div class="item2">
-                    <a href="https://www.linkedin.com/in/ingeniero-civil-ricardo-patino/">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1051/1051384.png" alt="linkedin-icon">
-                    </a>                
-                </div>
-                <div class="item2">
-                    <a href="https://twitter.com/96ricardoP">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1051/1051382.png" alt="twitter-icon">
-                    </a>
-                </div>
-                <div class="item2">
-                    <a href="https://github.com/rpatino12">
-                        <img src="https://cdn-icons-png.flaticon.com/512/1051/1051377.png" alt="github-icon">
-                    </a>
-                </div>
-            </section>
-        </div>
-    </section>
+    <h1>Remodelando el blogpost</h1>
 </body>
 </html>
