--- a/index.html
+++ b/index.html
@@ -8,11 +8,46 @@
 
     <link rel="stylesheet" href="./styles/styles.css">
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500&family=Fraunces:wght@500;600;700&display=swap" rel="stylesheet">
+
     <title>Ricardo Patiño</title>
 
     <link rel="shortcut icon" type="image/x-icon" href="./assets/icons/r-icon.png">
 </head>
 <body>
-    <h1>Remodelando el blogpost</h1>
+    <header>
+        <section class="header-top">
+            <div class="social-media-container">
+                <a href="#">
+                    <img src="./assets/icons/icons8-facebook.svg" alt="facebook-icon">
+                </a>
+                <a href="https://twitter.com/96ricardoP">
+                    <img src="./assets/icons/icons8-twitter.svg" alt="twitter-icon">
+                </a>
+                <a href="https://www.instagram.com/ricardop03/">
+                    <img src="./assets/icons/icons8-instagram.svg" alt="instagram-icon">
+                </a>
+                <a href="https://www.linkedin.com/in/ingeniero-civil-ricardo-patino/">
+                    <img src="./assets/icons/icons8-linkedin.svg" alt="linkedin-icon">
+                </a>
+                <a href="https://github.com/rpatino12">
+                    <img src="./assets/icons/icons8-github.svg" alt="github-icon">
+                </a>
+            </div>
+        </section>
+        <nav class="header-bottom">
+            <section class="header-bottom-left">
+                <span></span>
+                <a href="">
+                    <h1>MI BLOG</h1>
+                </a>
+            </section>
+            <section class="header-bottom-right">
+                <a href="./perfil.html">Sobre mí</a>
+            </section>
+        </nav>
+    </header>
 </body>
 </html>
