Main section finalizada

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500&family=Fraunces:wght@500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Commissioner:wght@300;400;500;600&family=Fraunces:wght@500;600;700&display=swap" rel="stylesheet">
 
     <title>Ricardo Patiño</title>
 
@@ -40,14 +40,20 @@
         <nav class="header-bottom">
             <section class="header-bottom-left">
                 <span></span>
-                <a href="">
+                <a href="/">
                     <h1>MI BLOG</h1>
                 </a>
             </section>
             <section class="header-bottom-right">
-                <a href="./perfil.html">Sobre mí</a>
+                <a title="Ricardo Patiño Echeverri" href="./perfil.html">Sobre mí</a>
             </section>
         </nav>
     </header>
+    <main>
+        <section class="main-title">
+            <h2>Conoce las novedades y noticias del mundo tech</h2>
+            <button class="primary-button">Entra ya!</button>
+        </section>
+    </main>
 </body>
 </html>
