Actualizacion de colores y tamaños de fuente

--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 <a href="#">
                     <img src="./assets/icons/icons8-facebook.svg" alt="facebook-icon">
                 </a>
-                <a href="https://twitter.com/96ricardoP">
+                <a href="https://twitter.com/96ricardoP" target="blank">
                     <img src="./assets/icons/icons8-twitter.svg" alt="twitter-icon">
                 </a>
-                <a href="https://www.instagram.com/ricardop03/">
+                <a href="https://www.instagram.com/ricardop03/" target="blank">
                     <img src="./assets/icons/icons8-instagram.svg" alt="instagram-icon">
                 </a>
-                <a href="https://www.linkedin.com/in/ingeniero-civil-ricardo-patino/">
+                <a href="https://www.linkedin.com/in/ingeniero-civil-ricardo-patino/" target="blank">
                     <img src="./assets/icons/icons8-linkedin.svg" alt="linkedin-icon">
                 </a>
-                <a href="https://github.com/rpatino12">
+                <a href="https://github.com/rpatino12" target="blank">
                     <img src="./assets/icons/icons8-github.svg" alt="github-icon">
                 </a>
             </div>
