Main page finalizada con estilos definitivos

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
     <link rel="shortcut icon" type="image/x-icon" href="./assets/icons/r-icon.png">
 </head>
-<body>
+<body class="home-body">
     <header>
         <section class="header-top">
             <div class="social-media-container">
@@ -49,10 +49,10 @@
             </section>
         </nav>
     </header>
-    <main>
+    <main class="home-main">
         <section class="main-title">
             <h2>Conoce las novedades y noticias del mundo tech</h2>
-            <button class="primary-button">Entra ya!</button>
+            <a href="/blogs.html" class="primary-button">Entra ya!</a>
         </section>
     </main>
 </body>
