Se comprimen las imagenes para un mejor rendimiento y se aplica el atributo loading-lazy

--- a/blogs.html
+++ b/blogs.html
@@ -72,7 +72,7 @@
             <div class="last-blogposts-container">
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-1.png" alt="Hombre jugando con casco de realidad virtual">
+                        <img src="./assets/images/post-1.png" loading="lazy" alt="Hombre jugando con casco de realidad virtual">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
@@ -80,7 +80,7 @@
                 </article>
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-2.png" alt="Escritorio con una laptop y un celular">
+                        <img src="./assets/images/post-2.png" loading="lazy" alt="Escritorio con una laptop y un celular">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
@@ -88,7 +88,7 @@
                 </article>
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-3.png" alt="Persona escribiendo en una laptop">
+                        <img src="./assets/images/post-3.png" loading="lazy" alt="Persona escribiendo en una laptop">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
@@ -96,7 +96,7 @@
                 </article>
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-1.png" alt="Hombre jugando con casco de realidad virtual">
+                        <img src="./assets/images/post-1.png" loading="lazy" alt="Hombre jugando con casco de realidad virtual">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
@@ -104,7 +104,7 @@
                 </article>
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-2.png" alt="Escritorio con una laptop y un celular">
+                        <img src="./assets/images/post-2.png" loading="lazy" alt="Escritorio con una laptop y un celular">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
@@ -112,7 +112,7 @@
                 </article>
                 <article class="last-blogposts-item">
                     <figure>
-                        <img src="./assets/images/post-3.png" alt="Persona escribiendo en una laptop">
+                        <img src="./assets/images/post-3.png" loading="lazy" alt="Persona escribiendo en una laptop">
                     </figure>
                     <h5>Título del Blogpost</h5>
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Inventore tenetur quibusdam aspernatur delectus sunt a ab iste ut ullam sint dolor optio minus eveniet ex enim, minima ea! Dolorum, quisquam.</p>
