Pagina blogs.html terminada con footer incluido

--- a/blogs.html
+++ b/blogs.html
@@ -121,6 +121,12 @@
             </div>
         </section>
     </main>
-    <footer></footer>
+    <footer>
+        <div>
+            <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            </p>
+        </div>
+    </footer>
 </body>
 </html>
